--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!-- https://www.kirupa.com/react/simple_todo_app_react.htm -->
-
-
 <!DOCTYPE html>
-<html>
 
+<html lang="en" xmlns="https://www.w3.org/1999/xhtml/">
 
 <head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width">
 	<title>To-Do List Built With React</title>
 	<script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
 	<script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
-	<style type="text/css"></style>
+	<link rel="stylesheet" href="css/styles.css"></link>
 </head>
 
 
@@ -29,7 +30,7 @@
 						<div className="header">
 							<form>
 								<input placeholder="enter task"></input>
-								<button type="sumbit">Add</button>
+								<button type="submit">Add</button>
 							</form>
 						</div>
 					</div>
