--- a/index.html
+++ b/index.html
@@ -23,13 +23,47 @@
 	<script type="text/babel">
 		var destination = document.querySelector("#container");
 
+
+		var TodoItems = React.createClass({
+			render: function() {
+			
+			}
+		});
+
+
 		var TodoList = React.createClass({
+			getInitialState: function () {
+				return {
+					items: []
+				};
+			},
+
+			addItem: function(e) {
+				var itemArray = this.state.items;
+
+				itemArray.push(
+					{
+						text: this._inputElement.value,
+						key:  Date.now()
+					}
+				);
+
+				this.setState({
+					items: itemArray
+				});
+
+				this._inputElement.value = "";
+				e.preventDefault();
+			},
+
 			render: function() {
 				return (
 					<div className="todoListMain">
 						<div className="header">
-							<form>
-								<input placeholder="enter task"></input>
+							<form onSubmit={this.addItem}>
+								<input ref={(a) => this._inputElement = a} 
+											 placeholder="Enter Task">
+								</input>
 								<button type="submit">Add</button>
 							</form>
 						</div>
