--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
 <body>
 	<div id="container">
-		
 	</div>
 
 	<script type="text/babel">
@@ -26,7 +25,19 @@
 
 		var TodoItems = React.createClass({
 			render: function() {
-			
+				var todoEntries = this.props.entries;
+
+				function createTasks(item) {
+					return <li key={item.key}>{item.text}</li>
+				}
+
+				var listItems = todoEntries.map(createTasks);
+
+				return (
+					<ul className="theList">
+						{listItems}
+					</ul>)
+				);
 			}
 		});
 
@@ -40,7 +51,6 @@
 
 			addItem: function(e) {
 				var itemArray = this.state.items;
-
 				itemArray.push(
 					{
 						text: this._inputElement.value,
@@ -62,11 +72,12 @@
 						<div className="header">
 							<form onSubmit={this.addItem}>
 								<input ref={(a) => this._inputElement = a} 
-											 placeholder="Enter Task">
+										placeholder="Enter Task">
 								</input>
 								<button type="submit">Add</button>
 							</form>
 						</div>
+						<TodoItems entries={this.state.items}/>
 					</div>
 				);
 			}
